--- a/index.qmd
+++ b/index.qmd
@@ -9,3 +9,12 @@ To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 ```{r}
 1 + 1
 ```
+
+```{r}
+2^5
+
+```
+
+```{r}
+log2(70)
+```
